--- a/Untitled1-Copy1.ipynb
+++ b/Untitled1-Copy1.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
@@ -343,33 +333,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:8: UserWarning: The semantics of the Keras 2 argument `steps_per_epoch` is not the same as the Keras 1 argument `samples_per_epoch`. `steps_per_epoch` is the number of batches to draw from the generator at each epoch. Basically steps_per_epoch = samples_per_epoch/batch_size. Similarly `nb_val_samples`->`validation_steps` and `val_samples`->`steps` arguments have changed. Update your method calls accordingly.\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/ipykernel/__main__.py:8: UserWarning: Update your `fit_generator` call to the Keras 2 API: `fit_generator(<keras.pre..., validation_data=<keras.pre..., steps_per_epoch=40, epochs=5, validation_steps=1000)`\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "25/40 [=================>............] - ETA: 30s - loss: 0.5928 - acc: 0.6909"
+      "39/40 [============================>.] - ETA: 1s - loss: 0.4146 - acc: 0.8235"
      ]
     }
    ],
    "source": [
     "model.fit_generator(\n",
     "    train_generator,\n",
-    "    samples_per_epoch=5120,\n",
-    "    nb_epoch=5,\n",
-    "    validation_data=validation_generator,\n",
-    "    nb_val_samples=1000,\n",
-    "    \n",
-    "    steps_per_epoch=40,\n",
     "    epochs=5,\n",
-    "    validation_steps=1000\n",
+    "    validation_data=validation_generator,\n",
+    "    validation_steps=1000,\n",
+    "    steps_per_epoch=40,\n",
     ")"
    ]
   },
